--- a/GradeCal_Using_ifelse.html
+++ b/GradeCal_Using_ifelse.html
@@ -1,4 +1,3 @@
-<!-- GradeEvaluator-IfElse.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +8,7 @@
   <h2>Check the console for output (If-Else Version)</h2>
 
   <script>
-    let marks = prompt("Enter your marks (out of 100):");
+    let marks = prompt("Your Entered marks (out of 100):");
     marks = Number(marks);
 
     if (isNaN(marks) || marks < 0 || marks > 100) {
