GradeCal_Using_SwitchCase.html

--- a/GradeCal_Using_SwitchCase.html
+++ b/GradeCal_Using_SwitchCase.html
@@ -8,7 +8,7 @@
   <h2>Check the console for output (Switch-Case Version)</h2>
 
   <script>
-    let marks = prompt("Enter your marks (out of 100):");
+    let marks = prompt("Your Entered marks (out of 100):");
     marks = Number(marks);
 
     if (isNaN(marks) || marks < 0 || marks > 100) {
